--- a/style.css
+++ b/style.css
@@ -57,3 +57,59 @@ h2{
     outline: 0;
     font-size: 24px;
 }
+
+button{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 150px;
+    height: 40px;
+    border: solid;
+    border-color:black;
+    padding: 0px 20px;
+    background-image: linear-gradient(to right top, #4b3ffb, #7646f8, #944ff5, #ab5af2, #bf66f0, #c464e9, #c863e2, #cb62db, #c351cd, #bc3fbe, #b428b0, #ac00a1);
+    color: white;
+    font-weight: 500;
+    cursor:pointer;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left:10px;
+    transition-duration: .3s;
+  }
+  
+  button img{
+    width: 13px;
+    position: absolute;
+    right: 0;
+    margin-right: 20px;
+    fill: white;
+    transition-duration: .3s;
+  }
+  
+  button:hover img {
+    right: 43%;
+
+    margin: 0;
+    padding: 0;
+    border: none;
+    transition-duration: .3s;
+  }
+  
+  button:active {
+    transform: translate(3px , 3px);
+    transition-duration: .3s;
+    box-shadow: 2px 2px 0px #000
+  }
+  button:hover h5{
+    color: transparent;
+    transition-duration: .3s;
+  }
+
+  button h5{
+    margin-left: 25px;    
+}
+
+ 
+
+
