--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body{
     width: 100%;
     background-image: linear-gradient(to right top, #4b3ffb, #7646f8, #944ff5, #ab5af2, #bf66f0, #c464e9, #c863e2, #cb62db, #c351cd, #bc3fbe, #b428b0, #ac00a1);
 }
-/* h2{
+h2{
     margin-top:460px;
     margin-left: 1220px;
     position: absolute; 
-} */
+}
 .display
 {
     width:50%;
@@ -101,12 +101,12 @@ button{
     transition-duration: .3s;
     box-shadow: 2px 2px 0px #000
   }
-  button:hover h5{
+  button:hover h4{
     color: transparent;
     transition-duration: .3s;
   }
 
-  button h5{
+  button h4{
     margin-left: 25px;    
 }
 
