--- a/style.css
+++ b/style.css
@@ -1,64 +1,84 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.container{
-    margin:12%;
+
+.container {
+    margin: 12%;
     width: 80%;
 }
-body{
+
+body {
     color: white;
     height: 75vh;
     width: 100%;
     background-image: linear-gradient(to right top, #4b3ffb, #7646f8, #944ff5, #ab5af2, #bf66f0, #c464e9, #c863e2, #cb62db, #c351cd, #bc3fbe, #b428b0, #ac00a1);
 }
-h2{
-    margin-top:460px;
+
+h2 {
+    margin-top: 460px;
     margin-left: 1220px;
-    position: absolute; 
+    position: absolute;
 }
-.display
-{
-    width:50%;
+
+.display {
+    width: 50%;
     max-height: 90px;
     margin-top: 50px;
     margin-bottom: 30px;
     background-color: white;
     color: #333;
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
-    padding:26px 20px;
+    padding: 26px 20px;
     border-radius: 5px;
 }
-.container h1,h2{
+
+.container h1,
+.container h2 {
     font-weight: 500;
     font-size: 45px;
 }
-h2{
+
+h2 {
     color: black;
-    position: absolute;
+    position: relative;
     margin-top: 170px;
-    margin-left: 75%;
+    margin-left: 90%;
     font-size: 36px;
 }
-.container h1 span{
-    color:black;
-    border-bottom:4px solid black;
-}
-.display img{
-    width: 30px;
-    cursor: pointer;
-}
-.display input{
-    border: 0;
-    outline: 0;
-    font-size: 24px;
+
+@media (max-height: 599px) {
+    h2 {
+        margin-left: 70%;
+    }
 }
 
-button{
+.container h1 span {
+    color: black;
+    border-bottom: 4px solid black;
+}
+
+.display img {
+    width: 30px;
+    cursor: pointer;
+    position: relative;
+}
+
+.display input {
+    outline: 0;
+    border: 0;
+    font-size: 24px;
+    position: relative;
+    min-height: 90px;
+    border-radius: 5px;
+}
+
+button {
     position: relative;
     display: flex;
     align-items: center;
@@ -66,50 +86,46 @@ button{
     width: 150px;
     height: 40px;
     border: solid;
-    border-color:black;
+    border-color: black;
     padding: 0px 20px;
     background-image: linear-gradient(to right top, #4b3ffb, #7646f8, #944ff5, #ab5af2, #bf66f0, #c464e9, #c863e2, #cb62db, #c351cd, #bc3fbe, #b428b0, #ac00a1);
     color: white;
     font-weight: 500;
-    cursor:pointer;
+    cursor: pointer;
     border-radius: 10px;
     margin-top: 20px;
-    margin-left:10px;
-    transition-duration: .3s;
-  }
-  
-  button img{
+    margin-left: 10px;
+    transition-duration: 0.3s;
+}
+
+button img {
     width: 13px;
     position: absolute;
     right: 0;
     margin-right: 20px;
     fill: white;
-    transition-duration: .3s;
-  }
-  
-  button:hover img {
-    right: 43%;
+    transition-duration: 0.3s;
+}
 
+button:hover img {
+    right: 43%;
     margin: 0;
     padding: 0;
     border: none;
-    transition-duration: .3s;
-  }
-  
-  button:active {
-    transform: translate(3px , 3px);
-    transition-duration: .3s;
-    box-shadow: 2px 2px 0px #000
-  }
-  button:hover h4{
-    color: transparent;
-    transition-duration: .3s;
-  }
-
-  button h4{
-    margin-left: 25px;    
+    transition-duration: 0.3s;
 }
 
- 
+button:active {
+    transform: translate(3px, 3px);
+    transition-duration: 0.3s;
+    box-shadow: 2px 2px 0px #000;
+}
 
+button:hover h4 {
+    color: transparent;
+    transition-duration: 0.3s;
+}
 
+button h4 {
+    margin-left: 25px;
+}
