almost final commit

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .container {
     margin: 12%;
     width: 80%;
+    height:100%;
 }
 
 body {
@@ -15,12 +16,6 @@ body {
     height: 75vh;
     width: 100%;
     background-image: linear-gradient(to right top, #4b3ffb, #7646f8, #944ff5, #ab5af2, #bf66f0, #c464e9, #c863e2, #cb62db, #c351cd, #bc3fbe, #b428b0, #ac00a1);
-}
-
-h2 {
-    margin-top: 460px;
-    margin-left: 1220px;
-    position: absolute;
 }
 
 .display {
@@ -36,10 +31,10 @@ h2 {
     justify-content: space-between;
     padding: 26px 20px;
     border-radius: 5px;
+    border: 1px solid black;
 }
 
-.container h1,
-.container h2 {
+.container h1,.container h2 {
     font-weight: 500;
     font-size: 45px;
 }
@@ -47,16 +42,16 @@ h2 {
 h2 {
     color: black;
     position: relative;
-    margin-top: 170px;
-    margin-left: 90%;
+    margin-top: 130px;
+    margin-left:1000px;
     font-size: 36px;
 }
 
-@media (max-height: 599px) {
+/* @media (max-height: 599px) {
     h2 {
         margin-left: 70%;
     }
-}
+} */
 
 .container h1 span {
     color: black;
@@ -69,13 +64,14 @@ h2 {
     position: relative;
 }
 
-.display input {
+.display input{
     outline: 0;
     border: 0;
     font-size: 24px;
     position: relative;
-    min-height: 90px;
+    min-height: 89px;
     border-radius: 5px;
+   
 }
 
 button {
@@ -129,3 +125,18 @@ button:hover h4 {
 button h4 {
     margin-left: 25px;
 }
+
+#lengthh
+{
+    margin-left: 400px;
+    margin-top: -85px;
+    outline: 0;
+    border: 0;
+    font-size: 24px;
+    max-width: 210px;
+    min-height: 90px;
+    border-radius: 5px;
+    position: absolute;
+    border: 1px solid black;
+}
+
